homework git commit -m homework git commit -m homework

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="col-md-4">
                     Add an animal:<br>
-                    <input type="text" id="endYear" class="form-control" name="end-year"><br>
+                    <input type="text" id="add-animal" class="form-control" name="end-year"><br>
                     <button type="button" id="submit" class="btn btn-outline-dark">SUBMIT</button>
             </div>
         </div>
