--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div id= "btn1"  class="col-md-12 ">
                     <button type="button" data-animal= "dog" class="btn btn-outline-dark">DOG</button>
                     <button type="button" data-animal= "cat" class="btn btn-outline-dark">CAT</button>
                     <button type="button" data-animal= "rabbit" class="btn btn-outline-dark">RABBIT</button>
@@ -47,7 +47,7 @@
             <div class="col-md-4">
                     Add an animal:<br>
                     <input type="text" id="add-animal" class="form-control" name="end-year"><br>
-                    <button type="button" id="submit" class="btn btn-outline-dark">SUBMIT</button>
+                    <button1 type="button" id="submit" class="btn btn-outline-dark">SUBMIT</button1>
             </div>
         </div>
 
